#100: prevent page jumping up on modal open

--- a/static/scss/assembly.scss
+++ b/static/scss/assembly.scss
@@ -1,6 +1,5 @@
 .no-scroll, .no-scroll body {
   overflow: hidden;
-  height: 100%;
 }
 
 // centered content
